--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
+
 body {
   margin: 0;
 }
@@ -7,15 +15,30 @@ ul {
   margin: 0;
 }
 
+li {
+  padding: 0;
+  margin: 0;
+}
+
+
 .d-flex {
   display: flex;
   justify-content: flex-start;
+  align-items: end;
+}
+
+.d-flex-column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 50px;
+  margin-bottom: 50px;
 }
 
 .d-flex span {
-  padding-right: 40px;
+  margin-right: 50px;
 }
 
-.d-flex>div {
-  padding-right: 40px;
+.d-flex .col {
+  width: 100px;
+  margin-bottom: 20px;
 }
